objects/Related_CustomerBusiness__c.object
<CustomObject>
    <description>Junction Object for Strategic and Customer Business Priority</description>
    <fields>
        <fullName>Customer_Business_Priority__c</fullName>
        <label>Customer Business Priority</label>
        <referenceTo>Customer_Business_Priority__c</referenceTo>
        <relationshipName>Related_Customer_Business_Priorities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative__c</fullName>
        <label>HP Strategic Initiative</label>
        <referenceTo>Strategic_Initiative__c</referenceTo>
        <relationshipLabel>Customer Business Priorities</relationshipLabel>
        <relationshipName>Related_Customer_Business_Priorities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueCBP_Key__c</fullName>
        <label>UniqueCBP Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Business Priorities</label>
    <nameField>
        <displayFormat>SCBP-{000}</displayFormat>
        <label>Related Customer Business Priorities Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Business Priorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>